--- a/app.json
+++ b/app.json
@@ -1,33 +1,34 @@
 {
   "expo": {
-    "name": "react-native-criptocoins",
-    "slug": "react-native-criptocoins",
+    "name": "JCrypto",
+    "slug": "JCrypto-app",
+    "description": "Enjoy searching coins!",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/blockchain.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/blockchain.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
-    },
-    "updates": {
-      "fallbackToCacheTimeout": 0
-    },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
-    "ios": {
-      "supportsTablet": true
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "package": "com.juancarra7.JCryptoapp"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "e421ccc2-72ea-447d-9437-52f83acf23fe"
+      }
+    },
+    "ios": {
+      "bundleIdentifier": "com.juancarra7.JCryptoapp"
     }
   }
 }
